fix ajax dropdown on blocks z-index

--- a/includes/less_files/pagebuilder/shortcodes/blocks.less
+++ b/includes/less_files/pagebuilder/shortcodes/blocks.less
@@ -224,7 +224,7 @@
     min-width: 141px;
     background-color: rgba(255, 255, 255, 0.94);
     .box-shadow(inset 0 0 1px 0 rgba(0, 0, 0, 0.3));
-    z-index: 2;
+    z-index: 99;
 
     &:before {
       content: '';
